eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Accident_Near_Miss__c.object
<CustomObject>
    <fields>
        <fullName>Date_reported__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Date reported</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Describe_any_Injuries_Occurred__c</fullName>
        <label>Describe any Injuries Occurred</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Has_the_cause_of_the_issue_been_fixed__c</fullName>
        <label>Has the cause of the issue been fixed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_has_will_the_issue_be_resolved__c</fullName>
        <label>How has/will the issue be resolved?</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Immediate_cause_of_the_accident__c</fullName>
        <label>Immediate cause of the accident</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Medical_assistance_required__c</fullName>
        <label>Medical assistance required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes (first aider)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes (ambulance)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_of_person_injured_Near_Miss__c</fullName>
        <label>Name of person injured Near Miss</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Please_provide_details_of_what_occurred__c</fullName>
        <label>Please provide details of what occurred</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Accident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Near Miss</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name of person reporting the accident</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accidents_Near_Misses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>When_did_the_accident_Near_Miss_Occur__c</fullName>
        <label>When did the accident/Near Miss Occur?</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Where_did_the_accident_occur__c</fullName>
        <label>Where did the accident occur?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Accident/Near Miss</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Name_of_person_injured_Near_Miss__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>INM{0000}</displayFormat>
        <label>Accident/Near Miss Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accidents/Near Misses</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>